# nyros

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md  configure.sh  gdb_setup.gdb
.github/workflows/: ci.yml
cmake/: nyros-image-targets.cmake  nyros-image.cmake  nyros-options.cmake  nyros-platform.cmake  nyros-toolchain.cmake
dev-setup/: README.md  pre-commit-hook  setup-dev-env.sh
dev-setup/vscode/: c_cpp_properties.json  settings.json
grub/: grub.cfg
iris/backend/: package-lock.json  package.json  tsconfig.json
iris/backend/src/: IrisBackend.ts  main.ts
iris/backend/src/decoders/: DecoderRegistration.ts  DecoderRegistry.ts  IPayloadDecoder.ts
iris/backend/src/decoders/boot/: GdtDecoder.ts  TssDecoder.ts
iris/backend/src/models/: EventRegistry.ts  IrisPacket.ts
iris/backend/src/parser/: IPacketParser.ts  IrisPacketParser.ts
iris/backend/src/processor/: ConsoleEventProcessor.ts  DefaultEventProcessor.ts  IEventProcessor.ts
iris/backend/src/protocol/: BinaryPacketDecoder.ts  IPacketDecoder.ts
iris/backend/src/server/: WebSocketServer.ts
iris/backend/src/socket/: KernelSocketClient.ts
iris/backend/src/transport/: IDataSource.ts  UnixSocketDataSource.ts
iris/backend/src/utils/: colors.ts
iris/frontend/: package-lock.json  package.json
iris/frontend/src/: App.tsx
iris/frontend/src/components/: EventList.tsx
iris/frontend/src/hooks/: useIrisConnection.ts
iris/frontend/src/stores/: eventStore.ts
kernel/: CMakeLists.txt  nyros.ld
kernel/include/arch/: arch_init.h
kernel/include/arch/x86/gdt/: gdt.h  tss.h
kernel/include/boot/: multiboot2.h
kernel/include/core/: types.h
kernel/include/iris/: event_types.h  iris.h
kernel/include/memory/: memory.h
kernel/include/serial/: serial.h
kernel/src/arch/x86/: arch_init.cpp
kernel/src/arch/x86/asm/: gdt_flush.S
kernel/src/arch/x86/boot/: boot.S
kernel/src/arch/x86/gdt/: gdt.cpp
kernel/src/boot/: init.cpp
kernel/src/iris/: iris.cpp
kernel/src/memory/: memory.cpp
kernel/src/serial/: serial.cpp
scripts/: build.sh  connect-gdb.sh  run-ci-checks.sh  run.sh
